--- a/projetos/interactive-rating-component-main/index.html
+++ b/projetos/interactive-rating-component-main/index.html
@@ -27,19 +27,19 @@
           appreciated to help us improve our offering!
         </p>
       </div>
-      <div class="rate flexbox">
+      <div class=" [ hoverlb ]  [ textcenter ] [ rate ] [ flexbox ] [ marginbt-15 ]">
         <input type="radio" id="star1" name="rate" value="1" />
-        <label for="star1" title="text">1</label>
+        <label for="star1" title="text"><p>1</p></label>
         <input type="radio" id="star2" name="rate" value="2" />
-        <label for="star2" title="text">2</label>
+        <label for="star2" title="text"><p>2</p></label>
         <input type="radio" id="star3" name="rate" value="3" />
-        <label for="star3" title="text">3</label>
+        <label for="star3" title="text"><p>3</p></label>
         <input type="radio" id="star4" name="rate" value="4" />
-        <label for="star2" title="text">4</label>
+        <label for="star2" title="text"><p>4</p></label>
         <input type="radio" id="star5" name="rate" value="5" />
-        <label for="star1" title="text">5</label>
+        <label for="star1" title="text"><p>5</p></label>
       </div>
-      <a href="page2.html"><button class="background-orange padding-10 width-300 round-border">Submit</button></a>
+      <a href="page2.html"><button class="background-orange padding-10 width-300 round-border">SUBMIT</button></a>
       <!-- Rating state end -->
       </div>
     </section>
