--- a/projetos/interactive-rating-component-main/index.html
+++ b/projetos/interactive-rating-component-main/index.html
@@ -27,17 +27,17 @@
           appreciated to help us improve our offering!
         </p>
       </div>
-      <div class=" [ hoverlb ]  [ textcenter ] [ rate ] [ flexbox ] [ marginbt-15 ]">
+      <div class=" [ hoverlb ] [ flexbox ] [ rate ][ marginbt-15 ]">
         <input type="radio" id="star1" name="rate" value="1" />
-        <label for="star1" title="text"><p>1</p></label>
+        <div class="ratingbg"><label for="star1" title="text"><p><span>1</span></p></label></div>
         <input type="radio" id="star2" name="rate" value="2" />
-        <label for="star2" title="text"><p>2</p></label>
+        <div class="ratingbg"><label for="star2" title="text"><p><span>2</span></p></label></div>
         <input type="radio" id="star3" name="rate" value="3" />
-        <label for="star3" title="text"><p>3</p></label>
+        <div class="ratingbg"><label for="star3" title="text"><p><span>3</span></p></label></div>
         <input type="radio" id="star4" name="rate" value="4" />
-        <label for="star2" title="text"><p>4</p></label>
+        <div class="ratingbg"><label for="star2" title="text"><p><span>4</span></p></label></div>
         <input type="radio" id="star5" name="rate" value="5" />
-        <label for="star1" title="text"><p>5</p></label>
+        <div class="ratingbg"><label for="star1" title="text"><p><span>5</span></p></label></div>
       </div>
       <a href="page2.html"><button class="background-orange padding-10 width-300 round-border">SUBMIT</button></a>
       <!-- Rating state end -->
