--- a/projetos/interactive-rating-component-main/index.html
+++ b/projetos/interactive-rating-component-main/index.html
@@ -17,7 +17,7 @@
   <body>
     <!-- Rating state start -->
     <section class="background-panel card">
-      <div class="ball background-lightgray marginbt-15">
+      <div class="[ ball ] [ margintp-5 marginbt-20 ]">
         <svg xmlns="http://www.w3.org/2000/svg"><path d="m9.067.43 1.99 4.031c.112.228.33.386.58.422l4.45.647a.772.772 0 0 1 .427 1.316l-3.22 3.138a.773.773 0 0 0-.222.683l.76 4.431a.772.772 0 0 1-1.12.813l-3.98-2.092a.773.773 0 0 0-.718 0l-3.98 2.092a.772.772 0 0 1-1.119-.813l.76-4.431a.77.77 0 0 0-.222-.683L.233 6.846A.772.772 0 0 1 .661 5.53l4.449-.647a.772.772 0 0 0 .58-.422L7.68.43a.774.774 0 0 1 1.387 0Z" fill="#FC7614"/></svg>
       </div>
       <h2 class="marginbt-15">How did we do?</h2>
@@ -27,21 +27,15 @@
           appreciated to help us improve our offering!
         </p>
       </div>
-      <div class=" [ hoverlb ] [ flexbox ] [ rate ][ marginbt-15 ]">
-        <input type="radio" id="star1" name="rate" value="1" />
-        <div class="ratingbg"><label for="star1" title="text"><p><span>1</span></p></label></div>
-        <input type="radio" id="star2" name="rate" value="2" />
-        <div class="ratingbg"><label for="star2" title="text"><p><span>2</span></p></label></div>
-        <input type="radio" id="star3" name="rate" value="3" />
-        <div class="ratingbg"><label for="star3" title="text"><p><span>3</span></p></label></div>
-        <input type="radio" id="star4" name="rate" value="4" />
-        <div class="ratingbg"><label for="star2" title="text"><p><span>4</span></p></label></div>
-        <input type="radio" id="star5" name="rate" value="5" />
-        <div class="ratingbg"><label for="star1" title="text"><p><span>5</span></p></label></div>
+      <div class="flexbox  marginbt-15 " id="balls">
+        <button>1</button>
+        <button>2</button>
+        <button>3</button>
+        <button>4</button>
+        <button>5</button>
       </div>
-      <a href="page2.html"><button class="background-orange padding-10 width-300 round-border">SUBMIT</button></a>
+      <a href="page2.html"><button class="background-orange padding-10 width-300 round-border button" id="submit">SUBMIT</button></a>
       <!-- Rating state end -->
-      </div>
     </section>
   </body>
 </html>
