--- a/projetos/single-price-grid-component-master/index.html
+++ b/projetos/single-price-grid-component-master/index.html
@@ -1,50 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Single Price Grid Component</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
-  Join our community
-
-  30-day, hassle-free money back guarantee
-
-  Gain access to our full library of tutorials along with expert code reviews. 
-  Perfect for any developers who are serious about honing their skills.
-
-  Monthly Subscription
-
-  &dollar;29 per month
-
-  Full access for less than &dollar;1 a day
-
-  Sign Up
-
-  Why Us
-
-  Tutorials by industry experts
-  Peer &amp; expert code review
-  Coding exercises
-  Access to our GitHub repos
-  Community forum
-  Flashcard decks
-  New videos every week
-  
-  <footer>
-    <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
-    </p>
-  </footer>
-</body>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
+    <link rel="stylesheet" href="style.css" />
+    <title>Frontend Mentor | Single Price Grid Component</title>
+  </head>
+  <body>
+    <main class="">
+      <div class="background-white card padding-20">
+        <h2 class="cltext-cyan paddingbt-15">Join our community</h2>
+        <p class="cltext-yl paddingbt-15 ftsz-24">30-day, hassle-free money back guarantee</p>
+        <p class="cltext-blue paddingbt-15">
+          Gain access to our full library of tutorials along with expert code
+          reviews. Perfect for any developers who are serious about honing their
+          skills.
+        </p>
+      </div>
+      <section class="flexbox">
+        <div class="background-cyan maxwidth-50 padding-20 gridbox minwidth-25 textcenter border1" id="card1">
+          <h3>Monthly Subscription</h3>
+          <p><strong class="ftsz-30">&dollar;29</strong> per month</p>
+          <p>Full access for less than &dollar;1 a day</p>
+          <button>Sign Up</button>
+        </div>
+          <div class="background-blue maxwidth-50 padding-20 minwidth-25 textcenter border2" id="card2">
+            <h3>Why Us</h3>
+            <p class="width-300 ftsz-20 cor">
+              Tutorials by industry experts Peer &amp; expert code review Coding
+              exercises Access to our GitHub repos Community forum Flashcard decks New
+              videos every week
+            </p>
+          </div>
+      </section>
+    </main>
+  </body>
 </html>
